tests/should_fail/sf007_data_no_constructors.hs
-- Should fail: data declaration with '=' but no constructors
module Sf007DataNoConstructors where

data Foo =
